--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
         <poi.version>3.9</poi.version>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -32,6 +31,12 @@
                     <groupId>stax</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
